Fix UI
-FilterForm fix filter type height
-Global styles, prevent squeeze of content after vertical scrollbar apperance

--- a/src/components/FilterForm/FilterForm.scss
+++ b/src/components/FilterForm/FilterForm.scss
@@ -1,5 +1,5 @@
 .filter-type {
-  max-height: 20px;
+  max-height: 26px;
   overflow-y: hidden;
   margin-bottom: 10px;
   transition: max-height 0.4s;
